feat: allow admins to reset username cooldown
